test/org/midica/testfiles/failing/eff-func-cont-rpn.midica
INCLUDE inc/instruments.midica


0: pitch_bend_range.line(1,12)
